Refresh the CSS from our current build
Update Theme definitions as well

--- a/org.eclipse.example.e4.commands/build.properties
+++ b/org.eclipse.example.e4.commands/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                plugin.xml,\
                css/,\
-               images/
+               images/,\
+               plugin.properties
