update the tutorial as it was given.

--- a/eclipseCon2014/org.eclipse.e4.examples.di.product/plugin.xml
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.product/plugin.xml
@@ -18,6 +18,7 @@
          </property>
       </product>
    </extension>
+   <!-- TODO 1.1.1 plugin extension contributions -->
    <extension
          point="org.eclipse.e4.examples.di.product.authors">
       <author
